--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -44,6 +44,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\onlyali\\\\cos1.dat')\n",
+    "x=data[:,0]\n",
+    "y=data[:,2]\n",
+    "plt.plot(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data1=np.loadtxt(\"D:\\\\doc\\\\data\\\\ion1testold\\\\PreAlign\\\\pop.dat\")\n",
     "data2=np.loadtxt(\"D:\\\\doc\\\\data\\\\ori\\\\oritest1\\\\cos2s.dat\")\n",
     "x1=data1[:,0]\n",
@@ -81,20 +93,69 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(16),cm2inch(6.5)))\n",
-    "data1=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\All\\\\totalangdis.dat')\n",
+    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(16),cm2inch(12)))\n",
+    "data1=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\onlyali\\\\GroAngWave.dat')\n",
+    "data2=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\NoAli\\\\ExcAngWave.dat')\n",
+    "data3=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\NoAli\\\\IonAngWave.dat')\n",
+    "data4=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\All\\\\ExcAngWave.dat')\n",
+    "data5=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\All\\\\IonAngWave.dat')\n",
+    "import matplotlib.gridspec as gridspec\n",
+    "\n",
+    "gs = gridspec.GridSpec(2, 2)\n",
+    "ax = fig.add_subplot(gs[0,:])\n",
     "x=data1[:,0]\n",
     "y=data1[:,1]\n",
     "z=data1[:,2]\n",
-    "ax = plt.subplot()\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar(im,fraction=0.07,pad=0.02)\n",
     "plt.yticks([90,180,270])\n",
-    "plt.title(\"(a)\",loc='left')"
+    "plt.title(\"(a)\",loc='left')\n",
+    "ax = fig.add_subplot(gs[1, 0])\n",
+    "x=data2[:,0]+data3[:,0]\n",
+    "y=data2[:,1]+data3[:,1]\n",
+    "z=data2[:,2]+data3[:,2]\n",
+    "plt.xlim(1620,1680)\n",
+    "plt.yticks([90,180,270])\n",
+    "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar(im)\n",
+    "plt.title(\"(b)\",loc='left')\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
+    "for tick in ax.get_yticklabels():\n",
+    "    tick.set_rotation(55)\n",
+    "ax = fig.add_subplot(gs[1, 1])\n",
+    "x=data4[:,0]+data5[:,0]\n",
+    "y=data4[:,1]+data5[:,1]\n",
+    "z=data4[:,2]+data5[:,2]\n",
+    "plt.xlim(1620,1680)\n",
+    "plt.yticks([90,180,270])\n",
+    "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar(im)\n",
+    "plt.title(\"(c)\",loc='left')\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
+    "for tick in ax.get_yticklabels():\n",
+    "    tick.set_rotation(55)\n",
+    "\n",
+    "plt.savefig(dir+'f3Wave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -146,7 +207,7 @@
     "for tick in ax.get_yticklabels():\n",
     "    tick.set_rotation(55)\n",
     "\n",
-    "plt.savefig(dir+'f3Wave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+    "plt.savefig(dir+'f4Wave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
@@ -484,6 +545,57 @@
     "#plt.yticks([90,180,270])\n",
     "#plt.title(\"(d) $P_{\\\\rm{Total}}$\",loc='left')\n",
     "plt.savefig(dir+'pumpExcRadWave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(16/2.54,6.5/2.54))\n",
+    "\n",
+    "plt.subplot(1,2,1)\n",
+    "data =np.loadtxt(\"D:\\\\doc\\\\data\\\\ion1test\\\\all\\\\timeenergyspctra.dat\")\n",
+    "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "# plt.xlim(-5, 5)\n",
+    "# plt.ylim(-5, 5)\n",
+    "ax=plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "\n",
+    "#interpolation='spline16'\n",
+    "plt.colorbar()\n",
+    "plt.xlabel(\"$t$ (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"Energy (eV)\")\n",
+    "plt.subplot(1,2,2)\n",
+    "DataAng =np.loadtxt(\"D:\\\\doc\\\\data\\\\ion1test\\\\all\\\\timeenergyspctra.dat\")\n",
+    "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=DataAng[-100:-1,1]\n",
+    "#print(x)\n",
+    "y=DataAng[-100:-1,2]\n",
+    "x1=np.arange(min(x),max(x),(max(x)-min(x))/200)\n",
+    "from scipy import interpolate\n",
+    "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
+    "plt.ylim(0,10)\n",
+    "plt.xlim(-0.009, 0.1)\n",
+    "plt.plot(y1,x1,'k')\n",
+    "plt.text(0.2*(max(y)-min(y)),0.6*(max(x)-min(x)),'(1+2)-REMPI')\n",
+    "plt.text(0.5*(max(y)-min(y)),0.2*(max(x)-min(x)),'(1+1)-REMPI')\n",
+    "#interpolation='spline16'\n",
+    "plt.ylabel(\"Energy (eV)\")\n",
+    "plt.xlabel(\"Intensity (arb.units)\")\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.3)\n",
+    "plt.savefig(dir+\"timeenergyspctraplustimeend.\"+figureType,bbox_inches = 'tight',transparent=True,dpi=figureDPI)\n",
+    "plt.show()"
    ]
   },
   {
