--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\onlyali\\\\cos1.dat')\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\onlyali\\\\OrientationAndAlignment.dat')\n",
     "x=data[:,0]\n",
     "y=data[:,2]\n",
     "plt.plot(x,y)"
