--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -59,11 +59,11 @@
     "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\t500t840\\\\44\\\\\"\n",
     "#dir='F:\\\\doc\\\\ion360\\\\t_30_60\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\42n\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\onlypump\\\\'\n",
+    "dir='D:\\\\dataofpro\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\2090100\\\\'\n",
     "# #dir='D:\\\\doc\\\\data\\\\ion1test\\\\shift\\\\t2\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\1140fs\\\\0\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\wave\\\\21\\\\'\n",
-    "dir='D:\\\\dataofpro\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -774,10 +774,10 @@
     "from scipy import interpolate\n",
     "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
     "# plt.xlim(-5, 5)\n",
-    "plt.ylim(-0.009, 0.1)\n",
+    "#plt.ylim(-0.009, 0.1)\n",
     "plt.plot(x1,y1,'k')\n",
     "plt.text(0.2*(max(x)-min(x)),0.8*(max(y)-min(y)),'(1+1)-REMPI')\n",
-    "plt.text(0.5*(max(x)-min(x)),0.2*(max(y)-min(y)),'(1+2)-REMPI')\n",
+    "plt.text(0.5*(max(x)-min(x)),0.3*(max(y)-min(y)),'(1+2)-REMPI')\n",
     "#interpolation='spline16'\n",
     "plt.xlabel(\"Energy (eV)\")\n",
     "plt.ylabel(\"Intensity (arb.units)\")\n",
@@ -846,8 +846,8 @@
     "plt.ylim(0,10)\n",
     "plt.xlim(-0.009, 0.1)\n",
     "plt.plot(y1,x1,'k')\n",
-    "plt.text(0.2*(max(y)-min(y)),0.6*(max(x)-min(x)),'(1+2)-REMPI')\n",
-    "plt.text(0.5*(max(y)-min(y)),0.2*(max(x)-min(x)),'(1+1)-REMPI')\n",
+    "plt.text(0.3*(max(y)-min(y)),0.6*(max(x)-min(x)),'(1+2)-REMPI')\n",
+    "plt.text(0.6*(max(y)-min(y)),0.2*(max(x)-min(x)),'(1+1)-REMPI')\n",
     "#interpolation='spline16'\n",
     "plt.ylabel(\"Energy (eV)\")\n",
     "plt.xlabel(\"Intensity (arb.units)\")\n",
@@ -977,7 +977,7 @@
    "outputs": [],
    "source": [
     "if os.path.exists(dir+'FreDis1.dat'):\n",
-    "    legengLoc=(0.25,0.8)\n",
+    "    legengLoc=(0.55,0.8)\n",
     "    plt.figure(figsize=((16/2.54),(13/2)))\n",
     "    #plt.figure(figsize=(8,6))\n",
     "    titleLoc=\"left\"\n",
