--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -59,9 +59,9 @@
     "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\t500t840\\\\44\\\\\"\n",
     "#dir='F:\\\\doc\\\\ion360\\\\t_30_60\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\42n\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\Noali\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\alilong\\\\'\n",
     "dir='D:\\\\dataofpro\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\2090100\\\\'\n",
-    "# #dir='D:\\\\doc\\\\data\\\\ion1test\\\\shift\\\\t2\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\1140fs\\\\0\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\wave\\\\21\\\\'\n",
     "print('Working directory',dir)\n",
