--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -44,10 +44,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\onlyali\\\\OrientationAndAlignment.dat')\n",
+    "plt.figure(figsize=(16/2.54,13/2.54))\n",
+    "plt.subplot(2,2,1)\n",
+    "data=np.loadtxt(\"D:\\\\doc\\\\data\\\\ion1test\\\\alilong\\\\laser.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "plt.xlim(0,5000)\n",
+    "plt.plot(x,y,'k')\n",
+    "plt.xlabel('Time (fs)')\n",
+    "plt.ylabel('Intensity (V/m)')\n",
+    "plt.title('(a)',loc='right')\n",
+    "plt.subplot(2,2,3)\n",
+    "data=np.loadtxt(\"D:\\\\doc\\\\data\\\\ion1test\\\\alilong\\\\OrientationAndAlignment.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,2]\n",
-    "plt.plot(x,y)"
+    "plt.xlim(0,5000)\n",
+    "plt.plot(x,y,'k')\n",
+    "plt.title('(c)',loc='right')\n",
+    "plt.xlabel('Time (fs)')\n",
+    "plt.ylabel('$\\\\langle\\\\rm{cos^2}\\\\theta\\\\rangle$')\n",
+    "plt.subplot(2,2,2)\n",
+    "plt.title('(b)',loc='right')\n",
+    "x=[0,1,2,3,4,5]\n",
+    "y=[ 0.21807067543956959,0.58789061452344060,0.17765944533726921,1.5804301297742095E-002, 4.9711941976089170E-004,5.4991865364745232E-006]\n",
+    "plt.bar(x, y)\n",
+    "plt.xlabel('Rotational quantum number $J$')\n",
+    "plt.ylabel('Population')\n",
+    "plt.xticks([0,1,2,3,4,5])\n",
+    "plt.subplot(2,2,4)\n",
+    "plt.title('(d)',loc='right')\n",
+    "data=np.loadtxt(\"D:\\\\doc\\\\data\\\\ion1test\\\\alilong\\\\GroAngWave.dat\")\n",
+    "\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.xlim(min(x),5000)\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.3)\n",
+    "plt.savefig(dir+'Aliss.'+figureType,bbox_inches ='tight',dpi=figureDPI)"
    ]
   },
   {
@@ -62,7 +103,6 @@
     "y1=data1[:,1]\n",
     "x2=data2[:,0]\n",
     "y2=data2[:,1]\n",
-    "plt.plot(x2,y2)\n",
     "fig, ax1 = plt.subplots()\n",
     "color = 'tab:red'\n",
     "ax1.set_xlim([450,3050])\n",
@@ -93,37 +133,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(16),cm2inch(12)))\n",
-    "data1=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\onlyali\\\\GroAngWave.dat')\n",
-    "data2=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\NoAli\\\\ExcAngWave.dat')\n",
-    "data3=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\NoAli\\\\IonAngWave.dat')\n",
-    "data4=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\All\\\\ExcAngWave.dat')\n",
-    "data5=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\All\\\\IonAngWave.dat')\n",
+    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*4)))\n",
     "import matplotlib.gridspec as gridspec\n",
-    "\n",
-    "gs = gridspec.GridSpec(2, 2)\n",
-    "ax = fig.add_subplot(gs[0,:])\n",
-    "x=data1[:,0]\n",
-    "y=data1[:,1]\n",
-    "z=data1[:,2]\n",
+    "gs = gridspec.GridSpec(4, 2)\n",
+    "ax = fig.add_subplot(gs[0,0])\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\Noali\\\\GroAngWave.dat')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar(im,fraction=0.07,pad=0.02)\n",
+    "plt.colorbar(im)\n",
     "plt.yticks([90,180,270])\n",
     "plt.title(\"(a)\",loc='left')\n",
+    "ax = fig.add_subplot(gs[0,1])\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\all\\\\GroAngWave.dat')\n",
+    "\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
+    "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar(im)\n",
+    "plt.yticks([90,180,270])\n",
+    "plt.title(\"(e)\",loc='left')\n",
     "ax = fig.add_subplot(gs[1, 0])\n",
-    "x=data2[:,0]+data3[:,0]\n",
-    "y=data2[:,1]+data3[:,1]\n",
-    "z=data2[:,2]+data3[:,2]\n",
+    "data1=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\NoAli\\\\ExcAngWave.dat')\n",
+    "data2=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\NoAli\\\\IonAngWave.dat')\n",
+    "x=data1[0:,0]\n",
+    "y=data1[:,1]\n",
+    "z=data1[:,2]+data2[:,2]\n",
     "plt.xlim(1620,1680)\n",
     "plt.yticks([90,180,270])\n",
     "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
@@ -131,31 +173,83 @@
     "plt.title(\"(b)\",loc='left')\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
-    "for tick in ax.get_yticklabels():\n",
-    "    tick.set_rotation(55)\n",
+    "# for tick in ax.get_yticklabels():\n",
+    "#     tick.set_rotation(55)\n",
     "ax = fig.add_subplot(gs[1, 1])\n",
-    "x=data4[:,0]+data5[:,0]\n",
-    "y=data4[:,1]+data5[:,1]\n",
-    "z=data4[:,2]+data5[:,2]\n",
+    "data1=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\All\\\\ExcAngWave.dat')\n",
+    "data2=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\All\\\\IonAngWave.dat')\n",
+    "x=data1[:,0]\n",
+    "y=data1[:,1]\n",
+    "z=data1[:,2]+data2[:,2]\n",
     "plt.xlim(1620,1680)\n",
     "plt.yticks([90,180,270])\n",
     "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar(im)\n",
-    "plt.title(\"(c)\",loc='left')\n",
+    "plt.title(\"(f)\",loc='left')\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
-    "for tick in ax.get_yticklabels():\n",
-    "    tick.set_rotation(55)\n",
-    "\n",
+    "# for tick in ax.get_yticklabels():\n",
+    "#     tick.set_rotation(55)\n",
+    "ax= fig.add_subplot(gs[2,0])\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\NoAli\\\\populationOfState.dat')\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=1-y1-y2\n",
+    "plt.plot(x,y1,'k-',x,y2,'r-',x,y3,'b-')\n",
+    "plt.title(\"(c)\",loc='left')\n",
+    "plt.xlim(1620,1680)\n",
+    "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.65))\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"Population\")\n",
+    "ax= fig.add_subplot(gs[2,1])\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\all\\\\PopulationOfState.dat')\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=1-y1-y2\n",
+    "plt.plot(x,y1,'k-',x,y2,'r-',x,y3,'b-')\n",
+    "plt.title(\"(g)\",loc='left')\n",
+    "plt.xlim(1620,1680)\n",
+    "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.65))\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"Population\")\n",
+    "ax= fig.add_subplot(gs[3,0])\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\NoAli\\\\timeenergyspctra.dat')\n",
+    "x=data[-100:-1,1]\n",
+    "#print(x)\n",
+    "y=data[-100:-1,2]\n",
+    "x1=np.arange(min(x),max(x),(max(x)-min(x))/200)\n",
+    "from scipy import interpolate\n",
+    "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
+    "# plt.xlim(-5, 5)\n",
+    "plt.ylim(-0.009, 0.15)\n",
+    "plt.plot(x1,y1,'k')\n",
+    "plt.title(\"(d)\",loc='left')\n",
+    "plt.text(0.2*(max(x)-min(x)),0.8*(max(y)-min(y)),'(1+1)-REMPI')\n",
+    "plt.text(0.5*(max(x)-min(x)),0.2*(max(y)-min(y)),'(1+2)-REMPI')\n",
+    "#interpolation='spline16'\n",
+    "plt.xlabel(\"Energy (eV)\")\n",
+    "plt.ylabel(\"Intensity (arb.units)\")\n",
+    "ax= fig.add_subplot(gs[3,1])\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\All\\\\timeenergyspctra.dat')\n",
+    "x=data[-100:-1,1]\n",
+    "#print(x)\n",
+    "y=data[-100:-1,2]\n",
+    "x1=np.arange(min(x),max(x),(max(x)-min(x))/200)\n",
+    "from scipy import interpolate\n",
+    "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
+    "# plt.xlim(-5, 5)\n",
+    "plt.ylim(-0.009, 0.15)\n",
+    "plt.plot(x1,y1,'k')\n",
+    "plt.title(\"(h)\",loc='left')\n",
+    "plt.text(0.2*(max(x)-min(x)),0.8*(max(y)-min(y)),'(1+1)-REMPI')\n",
+    "plt.text(0.5*(max(x)-min(x)),0.2*(max(y)-min(y)),'(1+2)-REMPI')\n",
+    "#interpolation='spline16'\n",
+    "plt.xlabel(\"Energy (eV)\")\n",
+    "plt.ylabel(\"Intensity (arb.units)\")\n",
     "plt.savefig(dir+'f3Wave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -303,111 +397,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if os.path.exists(dir+\"TimFreDis1.dat\"):\n",
-    "    plt.figure(figsize=(24/2.54,18/2.54))\n",
-    "    data=np.loadtxt(dir+\"Laser.dat\")\n",
-    "\n",
-    "    x1=data[:,0]\n",
-    "    y1=data[:,1]\n",
-    "    y2=data[:,2]\n",
-    "    y3=data[:,3]\n",
-    "\n",
-    "    plt.subplot(3,3,1)\n",
-    "    #plt.grid(False)\n",
-    "    x=x1\n",
-    "    y=y1\n",
-    "    plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.9,\"(a)\")\n",
-    "    plt.xlabel('Time ('+timeUnit+')')\n",
-    "    plt.ylabel(\"Intensity (a.u.)\")\n",
-    "    plt.xlim(TimeBegin,TimeEnd)\n",
-    "    plt.plot(x1,y1,'k-')\n",
-    "\n",
-    "    plt.subplot(3,3,2)\n",
-    "    dataf=np.loadtxt(dir+\"FreDis1.dat\")\n",
-    "    x=dataf[:,0]\n",
-    "    y=dataf[:,1]\n",
-    "    #plt.grid(False)\n",
-    "    plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.9,\"(a)\")\n",
-    "    plt.xlabel('Frequency (a.u.)')\n",
-    "    plt.ylabel(\"Intensity (arb.units)\")\n",
-    "    plt.plot(x,y,'k-')\n",
-    "\n",
-    "    plt.subplot(3,3,3)\n",
-    "    dataf=np.loadtxt(dir+\"TimFreDis1.dat\")\n",
-    "    x=dataf[:,0]\n",
-    "    y=dataf[:,1]\n",
-    "    z=dataf[:,2]\n",
-    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar()\n",
-    "    plt.xlabel('Time ('+timeUnit+')')\n",
-    "    plt.ylabel('Frequency (a.u.)')\n",
-    "\n",
-    "    plt.subplot(3,3,4)\n",
-    "    #plt.grid(False)\n",
-    "    #plt.title(\"(b)\",loc=\"left\")\n",
-    "    plt.xlabel('Time ('+timeUnit+')')\n",
-    "    plt.ylabel(\"Intensity (a.u.)\")\n",
-    "    plt.xlim(TimeTurn,TimeEnd)\n",
-    "    plt.plot(x1,y2,'r-')\n",
-    "    x=x1\n",
-    "    y=y2\n",
-    "    plt.text(TimeTurn+(TimeEnd-TimeTurn)*0.95,min(y)+(max(y)-min(y))*0.9,\"(b)\")\n",
-    "    plt.subplot(3,3,5)\n",
-    "    dataf=np.loadtxt(dir+\"FreDis2.dat\")\n",
-    "    x=dataf[:,0]\n",
-    "    y=dataf[:,1]\n",
-    "    #plt.grid(False)\n",
-    "    plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.9,\"(a)\")\n",
-    "    plt.xlabel('Frequency (a.u.)')\n",
-    "    plt.ylabel(\"Intensity (arb.units)\")\n",
-    "    plt.plot(x,y,'r-')\n",
-    "\n",
-    "    plt.subplot(3,3,6)\n",
-    "    dataf=np.loadtxt(dir+\"TimFreDis2.dat\")\n",
-    "    x=dataf[:,0]\n",
-    "    y=dataf[:,1]\n",
-    "    z=dataf[:,2]\n",
-    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar()\n",
-    "    plt.xlabel('Time ('+timeUnit+')')\n",
-    "    plt.ylabel('Frequency (a.u.)')\n",
-    "    plt.subplot(3,3,7)\n",
-    "    #plt.grid(False)\n",
-    "    x=x1\n",
-    "    y=y3\n",
-    "    plt.text(TimeTurn+(TimeEnd-TimeTurn)*0.95,min(y)+(max(y)-min(y))*0.9,\"(c)\")\n",
-    "\n",
-    "    plt.xlabel('Time ('+timeUnit+')')\n",
-    "    plt.ylabel(\"Intensity (a.u.)\")\n",
-    "    plt.xlim(TimeTurn,TimeEnd)\n",
-    "    plt.plot(x1,y3,'b-')\n",
-    "    plt.subplot(3,3,8)\n",
-    "    dataf=np.loadtxt(dir+\"FreDis3.dat\")\n",
-    "    x=dataf[:,0]\n",
-    "    y=dataf[:,1]\n",
-    "    #plt.grid(False)\n",
-    "    plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.9,\"(a)\")\n",
-    "    plt.xlabel('Frequency (a.u.)')\n",
-    "    plt.ylabel(\"Intensity (arb.units)\")\n",
-    "    plt.plot(x,y,'b-')\n",
-    "    plt.subplot(3,3,9)\n",
-    "    dataf=np.loadtxt(dir+\"TimFreDis3.dat\")\n",
-    "    x=dataf[:,0]\n",
-    "    y=dataf[:,1]\n",
-    "    z=dataf[:,2]\n",
-    "    plt.xlabel('Time ('+timeUnit+')')\n",
-    "    plt.ylabel('Frequency (a.u.)')\n",
-    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar()\n",
-    "    plt.savefig(dir+\"TimFreDis.\"+figureType,dpi=figureDPI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\pop.dat')\n",
     "from scipy import interpolate\n",
     "x=data[:,0]\n",
@@ -433,95 +422,6 @@
     "plt.xlabel(\"$t_{\\\\rm{pp}}$ (fs)\")\n",
     "plt.ylabel(\"Ionization probability\")\n",
     "plt.savefig(dir+\"f4pop.\"+figureType,bbox_inches=\"tight\",dpi=figureDPI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*3)))\n",
-    "data1=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\All\\\\GroAngWave.dat')\n",
-    "data2=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\All\\\\ExcAngWave.dat')\n",
-    "data3=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\all\\\\IonAngWave.dat')\n",
-    "data4=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\all\\\\totalangdis.dat')\n",
-    "import matplotlib.gridspec as gridspec\n",
-    "\n",
-    "gs = gridspec.GridSpec(3, 2)\n",
-    "ax = fig.add_subplot(gs[0,:])\n",
-    "x=data1[:,0]\n",
-    "y=data1[:,1]\n",
-    "z=data1[:,2]\n",
-    "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
-    "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar(im,fraction=0.07,pad=0.02)\n",
-    "plt.yticks([90,180,270])\n",
-    "plt.title(\"(a) $P_{\\\\rm{X}$\",loc='left')\n",
-    "ax = fig.add_subplot(gs[1, 0])\n",
-    "x=data2[:,0]\n",
-    "y=data2[:,1]\n",
-    "z=data2[:,2]\n",
-    "plt.xlim(1620,1680)\n",
-    "plt.yticks([90,180,270])\n",
-    "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar(im)\n",
-    "plt.title(\"(b) $P_{\\\\rm{A}}$\",loc='left')\n",
-    "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
-    "for tick in ax.get_yticklabels():\n",
-    "    tick.set_rotation(55)\n",
-    "ax = fig.add_subplot(gs[1, 1])\n",
-    "x=data3[:,0]\n",
-    "y=data3[:,1]\n",
-    "z=data3[:,2]\n",
-    "plt.xlim(1620,1680)\n",
-    "plt.yticks([90,180,270])\n",
-    "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar(im)\n",
-    "plt.title(\"(c) $P_{I_{n}}$\",loc='left')\n",
-    "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
-    "for tick in ax.get_yticklabels():\n",
-    "    tick.set_rotation(55)\n",
-    "    print('ok')\n",
-    "ax = fig.add_subplot(gs[2,:])\n",
-    "x=data4[:,0]\n",
-    "y=data4[:,1]\n",
-    "z=data4[:,2]\n",
-    "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
-    "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar(im,fraction=0.07,pad=0.02)\n",
-    "plt.yticks([90,180,270])\n",
-    "plt.title(\"(d) $P_{\\\\rm{Total}}$\",loc='left')\n",
-    "plt.savefig(dir+'ftotalWave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8),cm2inch(6.5)))\n",
-    "data1=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\OnlyPump\\\\GroAngWave.dat')\n",
-    "data2=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\OnlyPump\\\\ExcAngWave.dat')\n",
-    "data3=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\OnlyPump\\\\IonAngWave.dat')\n",
-    "data4=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\OnlyPump\\\\totalangdis.dat')\n",
-    "\n",
-    "x=data2[:,0]\n",
-    "y=data2[:,1]\n",
-    "z=data2[:,2]\n",
-    "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
-    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar()\n",
-    "plt.xlim(1620,1680)\n",
-    "plt.yticks([90,180,270])\n",
-    "#plt.title(\"(d) $P_{\\\\rm{Total}}$\",loc='left')\n",
-    "plt.savefig(dir+'pumpExctotalWave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
@@ -603,12 +503,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "plt.figure(figsize=(cm2inch(8),cm2inch(6.5)))\n",
-    "x= np.arange(0, 2, 0.01)\n",
-    "y=np.sin(x)\n",
-    "plt.plot(x,y)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
