--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -869,7 +869,63 @@
     "    dt[i]=i*10+100\n",
     "    print(dt[i],p[i])\n",
     "plt.scatter(dt,p,10,color='darkred',marker='o')\n",
+    "plt.ylim(0,1)\n",
     "plt.plot(dt,p,color='grey',marker='+')#,marker='1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(dt,p,10,color='darkred',marker='o')\n",
+    "plt.ylim(0,1)\n",
+    "plt.plot(dt,p,color='grey',marker='+')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p=np.zeros((24))\n",
+    "dt=np.zeros((24))\n",
+    "titleLoc='left'\n",
+    "plt.figure(figsize=(16/2.54,13/2.54))\n",
+    "for i in range(0,24,1):\n",
+    "    data1=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\'+str(i*10+100)+'\\\\Excradwave.dat')\n",
+    "    data2=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\'+str(i*10+100)+'\\\\Ionradwave.dat')\n",
+    "    plt.subplot(2,1,1)\n",
+    "    x=data1[:,0]\n",
+    "    y=data1[:,1]\n",
+    "    z=data1[:,2]\n",
+    "    plt.title(\"(a) $t_{\\\\rm{pp}} = $\"+str(i*10+100)+timeUnit,loc=titleLoc)\n",
+    "    #plt.xlim(TimeTurn,TimeEnd)\n",
+    "    plt.ylim(1.75,10.0)\n",
+    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "    plt.colorbar()\n",
+    "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "    plt.ylabel(\"$R$ (a.u.)\")\n",
+    "    plt.subplot(2,1,2)\n",
+    "    x=data2[:,0]\n",
+    "    y=data2[:,1]\n",
+    "    z=data2[:,2]\n",
+    "    plt.title(\"(b)\",loc=titleLoc)\n",
+    "    #plt.xlim(TimeTurn,TimeEnd)\n",
+    "    plt.ylim(1.75,10.0)\n",
+    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "    plt.colorbar()\n",
+    "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "    plt.ylabel(\"$R$ (a.u.)\")\n",
+    "    \n",
+    "    plt.savefig(dir+'ExcIonradWave'+str(i*10+100)+'.'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
+    "    \n",
+    "frames=[]\n",
+    "for image_name in image_list:\n",
+    "    frames.append(imageio.imread(image_name))\n",
+    "imageio.mimsave(gif_name,frames,'GIF',duration=myduration)"
    ]
   },
   {
