--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -61,6 +61,7 @@
     "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\42n\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\ion1test\\\\Noali\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\ion1test\\\\alilong\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\twopump\\\\2060100\\\\'\n",
     "dir='D:\\\\dataofpro\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\1140fs\\\\0\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\wave\\\\21\\\\'\n",
@@ -149,12 +150,12 @@
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"Population\")\n",
     "plt.subplot(1,2,2)\n",
-    "DataAng =np.loadtxt(dir+\"timeenergyspctra.dat\")\n",
+    "data =np.loadtxt(dir+\"timeenergyspctra.dat\")\n",
     "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataAng[-100:-1,1]\n",
-    "#print(x)\n",
-    "y=DataAng[-100:-1,2]\n",
+    "l=int(len(data[:,0])*110/150)\n",
+    "x=data[l:l+100,1]\n",
+    "y=data[l:l+100,2]\n",
     "x1=np.arange(min(x),max(x),(max(x)-min(x))/200)\n",
     "from scipy import interpolate\n",
     "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
@@ -663,11 +664,11 @@
     "for i in range(1,nx):\n",
     "    for j in range(1,ny):\n",
     "        zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
-    "print('nx= ',nx,' ny= ',ny)\n",
-    "print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
-    "print('x[50]',x[50])\n",
-    "print(x[0])\n",
-    "print(zMesh)\n",
+    "# print('nx= ',nx,' ny= ',ny)\n",
+    "# print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
+    "# print('x[50]',x[50])\n",
+    "# print(x[0])\n",
+    "# print(zMesh)\n",
     "xMesh=np.linspace(min(x),max(x),nx)\n",
     "yMesh=np.linspace(min(y),max(y),ny)\n",
     "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
@@ -764,12 +765,13 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(8/2.54,6.8/2.54))\n",
-    "DataAng =np.loadtxt(dir+\"timeenergyspctra.dat\")\n",
-    "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
-    "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataAng[-100:-1,1]\n",
-    "#print(x)\n",
-    "y=DataAng[-100:-1,2]\n",
+    "data =np.loadtxt(dir+\"timeenergyspctra.dat\")\n",
+    "l=int(len(data[:,0])*110/150)\n",
+    "print(len(data[:,0]))\n",
+    "l=np.argmax(data[:,2])\n",
+    "x=data[l-10:l+90,1]\n",
+    "print(l)\n",
+    "y=data[l-10:l+90,2]\n",
     "x1=np.arange(min(x),max(x),(max(x)-min(x))/200)\n",
     "from scipy import interpolate\n",
     "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
@@ -834,12 +836,13 @@
     "plt.xlabel(\"$t$ (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"Energy (eV)\")\n",
     "plt.subplot(1,2,2)\n",
-    "DataAng =np.loadtxt(dir+\"timeenergyspctra.dat\")\n",
+    "data =np.loadtxt(dir+\"timeenergyspctra.dat\")\n",
     "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataAng[-100:-1,1]\n",
-    "#print(x)\n",
-    "y=DataAng[-100:-1,2]\n",
+    "l=np.argmax(data[:,2])\n",
+    "x=data[l-10:l+90,1]\n",
+    "print(l)\n",
+    "y=data[l-10:l+90,2]\n",
     "x1=np.arange(min(x),max(x),(max(x)-min(x))/200)\n",
     "from scipy import interpolate\n",
     "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
@@ -1471,7 +1474,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3.10.5 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -1485,12 +1488,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
+    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
    }
   }
  },
