--- a/Python/FigureForTwoPump.ipynb
+++ b/Python/FigureForTwoPump.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt('D:\\\\dataofpro\\\\eneTRJV.dat')\n",
+    "data=np.loadtxt('D:\\\\dataofpro\\\\t2\\\\eneTRJV.dat')\n",
     "x=data[:,0]\n",
     "y1=data[:,1]\n",
     "y2=data[:,2]\n",
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt('D:\\\\dataofpro\\\\eneTRJV.dat')\n",
+    "data=np.loadtxt('D:\\\\dataofpro\\\\t2\\\\eneTRJV.dat')\n",
     "t = data[:,0]\n",
     "\n",
     "population_by_continent = {\n",
@@ -69,8 +69,8 @@
     "\n",
     "fig, ax = plt.subplots()\n",
     "ax.stackplot(t, population_by_continent.values(),\n",
-    "             labels=population_by_continent.keys(), alpha=0.8)\n",
-    "ax.legend(loc='lower right')\n",
+    "             labels=population_by_continent.keys(), alpha=0.6)\n",
+    "ax.legend(loc='lower center')\n",
     "#ax.set_title('World population')\n",
     "ax.set_xlabel('Time (fs)')\n",
     "ax.set_ylabel('Energy (a.u.)')\n",
@@ -88,7 +88,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3.10.5 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -102,12 +102,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
+    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
    }
   }
  },
