--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -630,9 +630,10 @@
     "plt.ylabel(\"Population\")\n",
     "ax= fig.add_subplot(gs[0,1])\n",
     "data=np.loadtxt(subdir+'dteq20fs\\\\timeenergyspctra.dat')\n",
-    "l=int(len(data[:,0])*50/200)\n",
-    "x=data[l:l+100,1]\n",
-    "y=data[l:l+100,2]\n",
+    "l=np.argmax(data[:,2])\n",
+    "x=data[l-10:l+90,1]\n",
+    "print(l)\n",
+    "y=data[l-10:l+90,2]\n",
     "x1=np.arange(min(x),max(x),(max(x)-min(x))/200)\n",
     "from scipy import interpolate\n",
     "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
@@ -676,9 +677,10 @@
     "plt.ylabel(\"Intensity (arb.units)\")\n",
     "ax= fig.add_subplot(gs[3,1])\n",
     "data=np.loadtxt(subdir+'dteq80fs\\\\timeenergyspctra.dat')\n",
-    "l=int(len(data[:,0])*110/200)\n",
-    "x=data[l:l+100,1]\n",
-    "y=data[l:l+100,2]\n",
+    "l=np.argmax(data[:,2])\n",
+    "x=data[l-10:l+90,1]\n",
+    "print(l)\n",
+    "y=data[l-10:l+90,2]\n",
     "x1=np.arange(min(x),max(x),(max(x)-min(x))/200)\n",
     "from scipy import interpolate\n",
     "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
@@ -940,7 +942,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3.10.5 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -954,12 +956,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
+    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
    }
   }
  },
