--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -504,11 +504,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subdir='D:\\\\doc\\\\data\\\\ion1testold\\\\wave\\\\'\n",
+    "subdir='D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\'\n",
     "plt.figure(figsize=(8*2/2.54,6.5*2/2.54))\n",
     "plt.subplot(2,2,1)\n",
-    "data1=np.loadtxt(subdir+'21\\\\exc_rad.dat')\n",
-    "data2=np.loadtxt(subdir+'21\\\\ion_rad.dat')\n",
+    "data1=np.loadtxt(subdir+'21\\\\ExcRadWave.dat')\n",
+    "data2=np.loadtxt(subdir+'21\\\\ionRadWave.dat')\n",
     "x=data1[:,0]*1000\n",
     "y=data1[:,1]\n",
     "z=data2[:,2]\n",
@@ -533,8 +533,8 @@
     "plt.title(\"(b)\",loc='left')\n",
     "\n",
     "plt.subplot(2,2,3)\n",
-    "data1=np.loadtxt(subdir+'63\\\\exc_rad.dat')\n",
-    "data2=np.loadtxt(subdir+'63\\\\ion_rad.dat')\n",
+    "data1=np.loadtxt(subdir+'63\\\\excRadWave.dat')\n",
+    "data2=np.loadtxt(subdir+'63\\\\ionRadWave.dat')\n",
     "x=data1[:,0]*1000\n",
     "y=data1[:,1]\n",
     "z=data2[:,2]\n",
@@ -546,8 +546,8 @@
     "plt.title(\"(c)\",loc='left')\n",
     "\n",
     "plt.subplot(2,2,4)\n",
-    "data1=np.loadtxt(subdir+'84\\\\exc_rad.dat')\n",
-    "data2=np.loadtxt(subdir+'84\\\\ion_rad.dat')\n",
+    "data1=np.loadtxt(subdir+'84\\\\excRadWave.dat')\n",
+    "data2=np.loadtxt(subdir+'84\\\\ionRadWave.dat')\n",
     "x=data1[:,0]*1000\n",
     "y=data1[:,1]\n",
     "z=data2[:,2]\n",
@@ -574,11 +574,11 @@
    "source": [
     "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*4)))\n",
     "import matplotlib.gridspec as gridspec\n",
-    "subdir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\\"\n",
+    "subdir=\"D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\\"\n",
     "gs = gridspec.GridSpec(4, 2)\n",
     "ax = fig.add_subplot(gs[0,0])\n",
-    "data=np.loadtxt(subdir+'dteq20fs\\\\popu.dat')\n",
-    "x=data[:,0]*1000\n",
+    "data=np.loadtxt(subdir+'21\\\\populationofstate.dat')\n",
+    "x=data[:,0]\n",
     "y1=data[:,1]\n",
     "y2=data[:,2]\n",
     "y3=1-y1-y2\n",
@@ -590,8 +590,8 @@
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"Population\")\n",
     "ax = fig.add_subplot(gs[1,0])\n",
-    "data=np.loadtxt(subdir+'dteq40fs\\\\popu.dat')\n",
-    "x=data[:,0]*1000\n",
+    "data=np.loadtxt(subdir+'42\\\\populationofstate.dat')\n",
+    "x=data[:,0]\n",
     "y1=data[:,1]\n",
     "y2=data[:,2]\n",
     "y3=1-y1-y2\n",
@@ -603,8 +603,8 @@
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"Population\")\n",
     "ax = fig.add_subplot(gs[2, 0])\n",
-    "data=np.loadtxt(subdir+'dteq60fs\\\\popu.dat')\n",
-    "x=data[:,0]*1000\n",
+    "data=np.loadtxt(subdir+'63\\\\populationofstate.dat')\n",
+    "x=data[:,0]\n",
     "y1=data[:,1]\n",
     "y2=data[:,2]\n",
     "y3=1-y1-y2\n",
@@ -616,8 +616,8 @@
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"Population\")\n",
     "ax = fig.add_subplot(gs[3,0])\n",
-    "data=np.loadtxt(subdir+'dteq80fs\\\\popu.dat')\n",
-    "x=data[:,0]*1000\n",
+    "data=np.loadtxt(subdir+'84\\\\populationofstate.dat')\n",
+    "x=data[:,0]\n",
     "y1=data[:,1]\n",
     "y2=data[:,2]\n",
     "y3=1-y1-y2\n",
@@ -629,7 +629,7 @@
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"Population\")\n",
     "ax= fig.add_subplot(gs[0,1])\n",
-    "data=np.loadtxt(subdir+'dteq20fs\\\\timeenergyspctra.dat')\n",
+    "data=np.loadtxt(subdir+'21\\\\timeenergyspctra.dat')\n",
     "l=np.argmax(data[:,2])\n",
     "x=data[l-10:l+90,1]\n",
     "print(l)\n",
@@ -646,10 +646,11 @@
     "plt.xlabel(\"Energy (eV)\")\n",
     "plt.ylabel(\"Intensity (arb.units)\")\n",
     "ax= fig.add_subplot(gs[1,1])\n",
-    "data=np.loadtxt(subdir+'dteq40fs\\\\timeenergyspctra.dat')\n",
-    "l=int(len(data[:,0])*70/200)\n",
-    "x=data[l:l+100,1]\n",
-    "y=data[l:l+100,2]\n",
+    "data=np.loadtxt(subdir+'42\\\\timeenergyspctra.dat')\n",
+    "l=np.argmax(data[:,2])\n",
+    "x=data[l-10:l+90,1]\n",
+    "print(l)\n",
+    "y=data[l-10:l+90,2]\n",
     "x1=np.arange(min(x),max(x),(max(x)-min(x))/200)\n",
     "from scipy import interpolate\n",
     "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
@@ -661,10 +662,11 @@
     "plt.xlabel(\"Energy (eV)\")\n",
     "plt.ylabel(\"Intensity (arb.units)\")\n",
     "ax= fig.add_subplot(gs[2,1])\n",
-    "data=np.loadtxt(subdir+'dteq60fs\\\\timeenergyspctra.dat')\n",
-    "l=int(len(data[:,0])*90/200)\n",
-    "x=data[l:l+100,1]\n",
-    "y=data[l:l+100,2]\n",
+    "data=np.loadtxt(subdir+'63\\\\timeenergyspctra.dat')\n",
+    "l=np.argmax(data[:,2])\n",
+    "x=data[l-10:l+90,1]\n",
+    "print(l)\n",
+    "y=data[l-10:l+90,2]\n",
     "x1=np.arange(min(x),max(x),(max(x)-min(x))/200)\n",
     "from scipy import interpolate\n",
     "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
@@ -676,7 +678,7 @@
     "plt.xlabel(\"Energy (eV)\")\n",
     "plt.ylabel(\"Intensity (arb.units)\")\n",
     "ax= fig.add_subplot(gs[3,1])\n",
-    "data=np.loadtxt(subdir+'dteq80fs\\\\timeenergyspctra.dat')\n",
+    "data=np.loadtxt(subdir+'84\\\\timeenergyspctra.dat')\n",
     "l=np.argmax(data[:,2])\n",
     "x=data[l-10:l+90,1]\n",
     "print(l)\n",
@@ -700,16 +702,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(16,24))\n",
+    "plt.figure(figsize=(16/2.54,24/2.54))\n",
     "titleLoc=\"left\"\n",
-    "dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\dteq20fs\\\\\"\n",
+    "dir=\"D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\21\\\\\"\n",
     "\n",
     "plt.subplot(4,2,1)\n",
-    "DataAng =np.loadtxt(dir+\"Exc_rad.dat\")\n",
+    "data =np.loadtxt(dir+\"ExcRadWave.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataAng[:,0]*1000\n",
-    "y=DataAng[:,1]\n",
-    "z=DataAng[:,2]\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
     "plt.title(\"(a)\",loc=titleLoc)\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
@@ -718,11 +720,11 @@
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
     "plt.subplot(4,2,2)\n",
-    "DataAng =np.loadtxt(dir+\"Ion_rad.dat\")\n",
+    "data =np.loadtxt(dir+\"IonRadWave.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataAng[:,0]*1000\n",
-    "y=DataAng[:,1]\n",
-    "z=DataAng[:,2]\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
     "plt.title(\"(e)\",loc=titleLoc)\n",
@@ -731,14 +733,14 @@
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
     "\n",
-    "dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\dteq40fs\\\\\"\n",
+    "dir=\"D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\42\\\\\"\n",
     "#plt.figure(figsize=(12,6))\n",
     "plt.subplot(4,2,3)\n",
-    "DataAng =np.loadtxt(dir+\"Exc_rad.dat\")\n",
+    "data =np.loadtxt(dir+\"ExcRadWave.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataAng[:,0]*1000\n",
-    "y=DataAng[:,1]\n",
-    "z=DataAng[:,2]\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
     "plt.title(\"(b)\",loc=titleLoc)\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
@@ -747,11 +749,11 @@
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
     "plt.subplot(4,2,4)\n",
-    "DataAng =np.loadtxt(dir+\"Ion_rad.dat\")\n",
+    "data =np.loadtxt(dir+\"IonRadWave.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataAng[:,0]*1000\n",
-    "y=DataAng[:,1]\n",
-    "z=DataAng[:,2]\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
     "plt.title(\"(f)\",loc=titleLoc)\n",
@@ -760,14 +762,14 @@
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
     "\n",
-    "dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\dteq60fs\\\\\"\n",
+    "dir=\"D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\63\\\\\"\n",
     "#plt.figure(figsize=(12,6))\n",
     "plt.subplot(4,2,5)\n",
-    "DataAng =np.loadtxt(dir+\"Exc_rad.dat\")\n",
+    "data =np.loadtxt(dir+\"ExcRadWave.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataAng[:,0]*1000\n",
-    "y=DataAng[:,1]\n",
-    "z=DataAng[:,2]\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
     "plt.title(\"(c)\",loc=titleLoc)\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
@@ -776,11 +778,11 @@
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
     "plt.subplot(4,2,6)\n",
-    "DataAng =np.loadtxt(dir+\"Ion_rad.dat\")\n",
+    "data =np.loadtxt(dir+\"IonRadWave.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataAng[:,0]*1000\n",
-    "y=DataAng[:,1]\n",
-    "z=DataAng[:,2]\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
     "plt.title(\"(g)\",loc=titleLoc)\n",
@@ -790,14 +792,14 @@
     "plt.ylabel(\"$R$ (a.u.)\")\n",
     "\n",
     "\n",
-    "dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\dteq80fs\\\\\"\n",
+    "dir=\"D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\84\\\\\"\n",
     "#plt.figure(figsize=(12,6))\n",
     "plt.subplot(4,2,7)\n",
-    "DataAng =np.loadtxt(dir+\"Exc_rad.dat\")\n",
+    "data =np.loadtxt(dir+\"ExcRadWave.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataAng[:,0]*1000\n",
-    "y=DataAng[:,1]\n",
-    "z=DataAng[:,2]\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
     "plt.title(\"(d)\",loc=titleLoc)\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
@@ -806,11 +808,11 @@
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
     "plt.subplot(4,2,8)\n",
-    "DataAng =np.loadtxt(dir+\"Ion_rad.dat\")\n",
+    "data =np.loadtxt(dir+\"IonRadWave.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataAng[:,0]*1000\n",
-    "y=DataAng[:,1]\n",
-    "z=DataAng[:,2]\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
     "plt.title(\"(h)\",loc=titleLoc)\n",
@@ -818,6 +820,12 @@
     "plt.colorbar()\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
+    "plt.subplots_adjust(left=0.1,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.25, \n",
+    "                    hspace=0.35)\n",
     "dir='D:\\\\doc\\\\data\\\\ion\\\\'\n",
     "plt.savefig(dir+\"ExcIonRad.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)"
    ]
@@ -923,8 +931,30 @@
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
     "    \n",
     "    plt.savefig(dir+'ExcIonradWave'+str(i*10+100)+'.'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
-    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fileList =os.listdir(dir)\n",
+    "print(fileList)\n",
+    "image_list=list()\n",
+    "print(\"Checking image list\")\n",
+    "n=len(fileList)\n",
+    "for i in range(n):\n",
+    "    s=dir+str(fileList[i])\n",
+    "    if s[-6:]==\"0.jpeg\":\n",
+    "        image_list.append(s)\n",
+    "        \n",
+    "import  imageio    \n",
+    "print(image_list)\n",
+    "myduration=eval(input(\"duration: s\"))\n",
     "frames=[]\n",
+    "gif_name=dir+\"waveRad.gif\"\n",
     "for image_name in image_list:\n",
     "    frames.append(imageio.imread(image_name))\n",
     "imageio.mimsave(gif_name,frames,'GIF',duration=myduration)"
@@ -936,13 +966,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.startfile(dir)\n"
+    "os.startfile(dir)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit (windows store)",
+   "display_name": "Python 3.9.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -956,12 +986,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
+    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
    }
   }
  },
