--- a/Python/FigureForTwoPump.ipynb
+++ b/Python/FigureForTwoPump.ipynb
@@ -44,12 +44,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt('D:\\\\dataofpro\\\\t2\\\\eneTRJV.dat')\n",
+    "import matplotlib.gridspec as gridspec\n",
+    "plt.figure(figsize=(16/2.54,6.5/2.54))\n",
+    "intDir=\"D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\t2\\\\\"\n",
+    "plt.subplot(1,2,1)\n",
+    "data=np.loadtxt(intDir+'populationofstate.dat')\n",
     "x=data[:,0]\n",
     "y1=data[:,1]\n",
     "y2=data[:,2]\n",
-    "y3=data[:,3]\n",
-    "plt.plot(x,y1,y2,y3)\n"
+    "y3=1-y1-y2\n",
+    "print('$P_{ion}$ = ',y3[-1])\n",
+    "plt.plot(x,y1,'k-',x,y2,'r--',x,y3,'b-.')\n",
+    "plt.title(\"(a)\",loc='left')\n",
+    "# plt.xlim(1620,1680)\n",
+    "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.35,0.7))\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"Population\")\n",
+    "\n",
+    "plt.subplot(1,2,2)\n",
+    "data=np.loadtxt(intDir+'timeenergyspctra.dat')\n",
+    "l=np.argmax(data[:,2])\n",
+    "x=data[l-10:l+90,1]\n",
+    "print(l)\n",
+    "y=data[l-10:l+90,2]\n",
+    "x1=np.arange(min(x),max(x),(max(x)-min(x))/200)\n",
+    "from scipy import interpolate\n",
+    "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
+    "#plt.ylim(-0.009, 0.12)\n",
+    "plt.plot(x1,y1,'k')\n",
+    "plt.title(\"(b)\",loc='left')\n",
+    "# plt.text(0.3*(max(x)-min(x)),0.5*(max(y)-min(y)),'(0+2)-REMPI')\n",
+    "plt.text(0.2*(max(x)-min(x)),0.8*(max(y)-min(y)),'(1+1)-REMPI')\n",
+    "plt.text(0.15*(max(x)-min(x)),0.15*(max(y)-min(y)),'(2+0)-REMPI')\n",
+    "plt.text(0.6*(max(x)-min(x)),0.2*(max(y)-min(y)),'(1+2)-REMPI')\n",
+    "# plt.text(0.6*(max(x)-min(x)),0.2*(max(y)-min(y)),'(3+0)-REMPI')\n",
+    "plt.xlabel(\"Energy (eV)\")\n",
+    "plt.ylabel(\"Intensity (arb.units)\")\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.25, \n",
+    "                    hspace=0.2)\n",
+    "plt.savefig(outDir+'popene'+intDir[-3:-1]+'.'+figureType,bbox_inches = 'tight',transparent=True,dpi=figureDPI)"
    ]
   },
   {
@@ -58,7 +95,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt('D:\\\\dataofpro\\\\t2\\\\eneTRJV.dat')\n",
+    "plt.figure(figsize=(16/2.54,6.5/2.54))\n",
+    "intDir=\"D:\\\\doc\\\\data\\\\ion1test\\\\twoPump\\\\2060100\\\\\"\n",
+    "plt.subplot(1,2,1)\n",
+    "data =np.loadtxt(intDir+\"absang.dat\")\n",
+    "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "# plt.xlim(-5, 5)\n",
+    "# plt.ylim(-5, 5)\n",
+    "ax=plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "\n",
+    "#interpolation='spline16'\n",
+    "plt.colorbar()\n",
+    "plt.xlabel(\"$t$ (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"$\\\\theta$ (deg)\")\n",
+    "plt.subplot(1,2,2)\n",
+    "data =np.loadtxt(intDir+\"absang.dat\")\n",
+    "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "l=np.argmax(data[:,2])\n",
+    "x=data[l-20:l+100,1]\n",
+    "\n",
+    "print(l)\n",
+    "y=data[l-20:l+100,2]\n",
+    "abs(y)\n",
+    "print(y)\n",
+    "x1=np.arange(min(x),max(x),(max(x)-min(x))/200)\n",
+    "from scipy import interpolate\n",
+    "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
+    "#plt.ylim(0,10)\n",
+    "#plt.xlim(-0.009, 0.1)\n",
+    "plt.scatter(y,x,8)\n",
+    "# plt.text(0.3*(max(y)-min(y)),0.6*(max(x)-min(x)),'(1+2)-REMPI')\n",
+    "# plt.text(0.6*(max(y)-min(y)),0.2*(max(x)-min(x)),'(1+1)-REMPI')\n",
+    "#interpolation='spline16'\n",
+    "plt.ylabel(\"Energy (eV)\")\n",
+    "plt.xlabel(\"Intensity (arb.units)\")\n",
+    "plt.savefig(outDir+\"timeenergyspctraplustimeend.\"+figureType,bbox_inches = 'tight',transparent=True,dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\t2\\\\eneTRJV.dat')\n",
     "t = data[:,0]\n",
     "\n",
     "population_by_continent = {\n",
@@ -83,12 +169,102 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "titleLoc='left'\n",
+    "plt.figure(figsize=(16/2.54,13/2.54))\n",
+    "for i in range(0,1,1):\n",
+    "    data1=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\20'+str(i+3)+'0100\\\\Excradwave.dat')\n",
+    "    data2=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\20'+str(i+3)+'0100\\\\Ionradwave.dat')\n",
+    "    plt.subplot(2,1,1)\n",
+    "    x=data1[:,0]\n",
+    "    y=data1[:,1]\n",
+    "    z=data1[:,2]\n",
+    "    plt.title(\"(a)\")\n",
+    "    #plt.xlim(TimeTurn,TimeEnd)\n",
+    "    plt.ylim(1.75,10.0)\n",
+    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "    plt.colorbar()\n",
+    "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "    plt.ylabel(\"$R$ (a.u.)\")\n",
+    "    plt.subplot(2,1,2)\n",
+    "    x=data2[:,0]\n",
+    "    y=data2[:,1]\n",
+    "    z=data2[:,2]\n",
+    "    plt.title(\"(b)\",loc=titleLoc)\n",
+    "    #plt.xlim(TimeTurn,TimeEnd)\n",
+    "    plt.ylim(1.75,10.0)\n",
+    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "    plt.colorbar()\n",
+    "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "    plt.ylabel(\"$R$ (a.u.)\")\n",
+    "    figName=outDir+'ExcIonradWave20'+str(i+3)+'0100.'+figureType\n",
+    "    plt.savefig(figName,bbox_inches='tight',dpi=figureDPI)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from matplotlib import cbook\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.colors import LightSource\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    # Test data\n",
+    "    x, y = np.mgrid[-5:5:0.05, -5:5:0.05]\n",
+    "    z = 5 * (np.sqrt(x**2 + y**2) + np.sin(x**2 + y**2))\n",
+    "\n",
+    "    dem = cbook.get_sample_data('jacksboro_fault_dem.npz', np_load=True)\n",
+    "    elev = dem['elevation']\n",
+    "\n",
+    "    fig = compare(z, plt.cm.copper)\n",
+    "    fig.suptitle('HSV Blending Looks Best with Smooth Surfaces', y=0.95)\n",
+    "\n",
+    "    fig = compare(elev, plt.cm.gist_earth, ve=0.05)\n",
+    "    fig.suptitle('Overlay Blending Looks Best with Rough Surfaces', y=0.95)\n",
+    "\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "def compare(z, cmap, ve=1):\n",
+    "    # Create subplots and hide ticks\n",
+    "    fig, axs = plt.subplots(ncols=2, nrows=2)\n",
+    "    for ax in axs.flat:\n",
+    "        ax.set(xticks=[], yticks=[])\n",
+    "\n",
+    "    # Illuminate the scene from the northwest\n",
+    "    ls = LightSource(azdeg=315, altdeg=45)\n",
+    "\n",
+    "    axs[0, 0].imshow(z, cmap=cmap)\n",
+    "    axs[0, 0].set(xlabel='Colormapped Data')\n",
+    "\n",
+    "    axs[0, 1].imshow(ls.hillshade(z, vert_exag=ve), cmap='gray')\n",
+    "    axs[0, 1].set(xlabel='Illumination Intensity')\n",
+    "\n",
+    "    rgb = ls.shade(z, cmap=cmap, vert_exag=ve, blend_mode='hsv')\n",
+    "    axs[1, 0].imshow(rgb)\n",
+    "    axs[1, 0].set(xlabel='Blend Mode: \"hsv\" (default)')\n",
+    "\n",
+    "    rgb = ls.shade(z, cmap=cmap, vert_exag=ve, blend_mode='overlay')\n",
+    "    axs[1, 1].imshow(rgb)\n",
+    "    axs[1, 1].set(xlabel='Blend Mode: \"overlay\"')\n",
+    "\n",
+    "    return fig\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit (windows store)",
+   "display_name": "Python 3.9.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -102,12 +278,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
+    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
    }
   }
  },
