--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -63,6 +63,7 @@
     "dir='D:\\\\doc\\\\data\\\\ion1test\\\\alilong\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\twopump\\\\2060100\\\\'\n",
     "dir='D:\\\\dataofpro\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\21\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\1140fs\\\\0\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\wave\\\\21\\\\'\n",
     "print('Working directory',dir)\n",
@@ -153,14 +154,15 @@
     "data =np.loadtxt(dir+\"timeenergyspctra.dat\")\n",
     "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "l=int(len(data[:,0])*110/150)\n",
-    "x=data[l:l+100,1]\n",
-    "y=data[l:l+100,2]\n",
+    "l=np.argmax(data[:,2])\n",
+    "x=data[l-10:l+90,1]\n",
+    "print(l)\n",
+    "y=data[l-10:l+90,2]\n",
     "x1=np.arange(min(x),max(x),(max(x)-min(x))/200)\n",
     "from scipy import interpolate\n",
     "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
     "# plt.xlim(-5, 5)\n",
-    "plt.ylim(-0.009, 0.1)\n",
+    "#plt.ylim(-0.009, 0.1)\n",
     "plt.plot(x1,y1,'k')\n",
     "plt.text(0.2*(max(x)-min(x)),0.8*(max(y)-min(y)),'(1+1)-REMPI')\n",
     "plt.text(0.5*(max(x)-min(x)),0.2*(max(y)-min(y)),'(1+2)-REMPI')\n",
@@ -847,7 +849,7 @@
     "from scipy import interpolate\n",
     "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
     "plt.ylim(0,10)\n",
-    "plt.xlim(-0.009, 0.1)\n",
+    "#plt.xlim(-0.009, 0.1)\n",
     "plt.plot(y1,x1,'k')\n",
     "plt.text(0.3*(max(y)-min(y)),0.6*(max(x)-min(x)),'(1+2)-REMPI')\n",
     "plt.text(0.6*(max(y)-min(y)),0.2*(max(x)-min(x)),'(1+1)-REMPI')\n",
@@ -1474,7 +1476,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit (windows store)",
+   "display_name": "Python 3.9.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1488,12 +1490,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
+    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
    }
   }
  },
