--- a/Python/FigureForTwoPump.ipynb
+++ b/Python/FigureForTwoPump.ipynb
@@ -144,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\t2\\\\eneTRJV.dat')\n",
+    "data=np.loadtxt('D:\\\\Dataofpro\\\\eneTRJV.dat')\n",
     "t = data[:,0]\n",
     "\n",
     "population_by_continent = {\n",
@@ -156,11 +156,48 @@
     "fig, ax = plt.subplots()\n",
     "ax.stackplot(t, population_by_continent.values(),\n",
     "             labels=population_by_continent.keys(), alpha=0.6)\n",
-    "ax.legend(loc='lower center')\n",
+    "ax.legend(loc='upper left')\n",
     "#ax.set_title('World population')\n",
     "ax.set_xlabel('Time (fs)')\n",
     "ax.set_ylabel('Energy (a.u.)')\n",
     "plt.savefig(outDir+'EnergyRJV.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(16/2.54,13/2.54))\n",
+    "intDir='D:\\\\dataofpro\\\\'\n",
+    "fig = plt.figure(constrained_layout=True)\n",
+    "import matplotlib.gridspec as gridspec\n",
+    "gs = gridspec.GridSpec(2, 2)\n",
+    "ax1 = fig.add_subplot(gs[0,0])\n",
+    "data=np.loadtxt(intDir+'kpos.dat')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "ax1.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.ylim(-5.5,max(y))\n",
+    "ax2 = fig.add_subplot(gs[0,1])\n",
+    "data=np.loadtxt(intDir+'kneg.dat')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "ax2.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.ylim(min(y),5.5)\n",
+    "ax = fig.add_subplot(gs[1,:])\n",
+    "data=np.loadtxt(intDir+'ktot.dat')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "ax.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.ylim(-5.5,5.5)\n",
+    "plt.savefig(outDir+'K.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -264,7 +301,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3.10.5 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -278,12 +315,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
+    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
    }
   }
  },
