--- a/Python/FigureForTwoPump.ipynb
+++ b/Python/FigureForTwoPump.ipynb
@@ -46,7 +46,8 @@
    "source": [
     "import matplotlib.gridspec as gridspec\n",
     "plt.figure(figsize=(16/2.54,6.5/2.54))\n",
-    "intDir=\"D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\t2\\\\\"\n",
+    "\n",
+    "intDir=\"D:\\\\dataofpro\\\\\"\n",
     "plt.subplot(1,2,1)\n",
     "data=np.loadtxt(intDir+'populationofstate.dat')\n",
     "x=data[:,0]\n",
@@ -96,7 +97,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(16/2.54,6.5/2.54))\n",
-    "intDir=\"D:\\\\doc\\\\data\\\\ion1test\\\\twoPump\\\\2060100\\\\\"\n",
+    "#intDir=\"D:\\\\doc\\\\data\\\\ion1test\\\\twoPump\\\\2060100\\\\\"\n",
     "plt.subplot(1,2,1)\n",
     "data =np.loadtxt(intDir+\"absang.dat\")\n",
     "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
@@ -144,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt('D:\\\\Dataofpro\\\\eneTRJV.dat')\n",
+    "data=np.loadtxt('D:\\\\Doc\\\\data\\\\ion1test\\\\2040\\\\eneTRJV.dat')\n",
     "t = data[:,0]\n",
     "\n",
     "population_by_continent = {\n",
@@ -170,32 +171,111 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(16/2.54,13/2.54))\n",
-    "intDir='D:\\\\dataofpro\\\\'\n",
+    "plt.figure(figsize=(32/2.54,26/2.54))\n",
+    "intDir='D:\\\\doc\\\\data\\\\ion1test\\\\2040\\\\'\n",
     "fig = plt.figure(constrained_layout=True)\n",
     "import matplotlib.gridspec as gridspec\n",
-    "gs = gridspec.GridSpec(2, 2)\n",
-    "ax1 = fig.add_subplot(gs[0,0])\n",
+    "gs = gridspec.GridSpec(3, 3)\n",
     "data=np.loadtxt(intDir+'kpos.dat')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
-    "z=data[:,2]\n",
-    "ax1.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "z1=data[:,2]\n",
+    "z2=data[:,3]\n",
+    "z3=data[:,4]\n",
+    "ax11 = fig.add_subplot(gs[0,0])\n",
+    "ax11.tricontourf(x,y,z1,levels,cmap='jet')\n",
     "plt.ylim(-5.5,max(y))\n",
-    "ax2 = fig.add_subplot(gs[0,1])\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"Momentum (a.u.)\")\n",
+    "ax21 = fig.add_subplot(gs[0,1],sharex=ax11, sharey=ax11)\n",
+    "ax21.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "ax31 = fig.add_subplot(gs[0,2],sharex=ax11, sharey=ax11)\n",
+    "ax31.tricontourf(x,y,z3,levels,cmap='jet')\n",
+    "\n",
     "data=np.loadtxt(intDir+'kneg.dat')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
-    "z=data[:,2]\n",
-    "ax2.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.ylim(min(y),5.5)\n",
-    "ax = fig.add_subplot(gs[1,:])\n",
+    "z1=data[:,2]\n",
+    "z2=data[:,3]\n",
+    "z3=data[:,4]\n",
+    "ax12 = fig.add_subplot(gs[1,0],sharex=ax11)\n",
+    "ax12.tricontourf(x,y,z1,levels,cmap='jet')\n",
+    "ax22 = fig.add_subplot(gs[1,1],sharex=ax11)\n",
+    "ax22.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "ax32 = fig.add_subplot(gs[1,2],sharex=ax11)\n",
+    "ax32.tricontourf(x,y,z3,levels,cmap='jet')\n",
+    "# plt.ylim(min(y),5.5)\n",
+    "\n",
     "data=np.loadtxt(intDir+'ktot.dat')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
-    "z=data[:,2]\n",
-    "ax.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.ylim(-5.5,5.5)\n",
+    "z1=data[:,2]\n",
+    "z2=data[:,3]\n",
+    "z3=data[:,4]\n",
+    "ax13= fig.add_subplot(gs[2,0],sharex=ax11)\n",
+    "ax13.tricontourf(x,y,z1,levels,cmap='jet')\n",
+    "ax23= fig.add_subplot(gs[2,1],sharex=ax11)\n",
+    "ax23.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "ax33= fig.add_subplot(gs[2,2],sharex=ax11)\n",
+    "ax33.tricontourf(x,y,z3,levels,cmap='jet')\n",
+    "#plt.ylim(-5.5,5.5)\n",
+    "plt.subplots_adjust(left=0.1,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.3)\n",
+    "plt.savefig(outDir+'K.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import matplotlib.gridspec as gridspec\n",
+    "fig=plt.figure(figsize=(8*2/2.54,13/2.54),constrained_layout=True)\n",
+    "intDir='D:\\\\doc\\\\data\\\\ion1test\\\\2040\\\\'\n",
+    "#fig = plt.figure()\n",
+    "gs = gridspec.GridSpec(2, 2)\n",
+    "data=np.loadtxt(intDir+'ktot.dat')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z1=data[:,2]\n",
+    "z2=data[:,3]\n",
+    "z3=data[:,4]\n",
+    "z4=z1+z2+z3\n",
+    "ax1= fig.add_subplot(gs[0,0])\n",
+    "ax1.tricontourf(x,y,z1,levels,cmap='jet')\n",
+    "plt.title(\"(a)\",loc='left')\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"Momentum (arb.units)\")\n",
+    "ax2= fig.add_subplot(gs[0,1],sharex=ax1,sharey=ax1)\n",
+    "ax2.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "plt.title(\"(b)\",loc='left')\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"Momentum (arb.units)\")\n",
+    "ax3= fig.add_subplot(gs[1,0],sharex=ax1,sharey=ax1)\n",
+    "ax3.tricontourf(x,y,z3,levels,cmap='jet')\n",
+    "plt.title(\"(c)\",loc='left')\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"Momentum (arb.units)\")\n",
+    "ax4= fig.add_subplot(gs[1,1],sharex=ax1,sharey=ax1)\n",
+    "ax4.tricontourf(x,y,z4,levels,cmap='jet')\n",
+    "plt.title(\"(d)\",loc='left')\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"Momentum (arb.units)\")\n",
+    "#plt.ylim(-5.5,5.5)\n",
+    "plt.subplots_adjust(left=0.1,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.3)\n",
     "plt.savefig(outDir+'K.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
     "\n",
     "plt.show()"
@@ -301,7 +381,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit (windows store)",
+   "display_name": "Python 3.9.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -315,12 +395,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
+    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
    }
   }
  },
