--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -62,8 +62,8 @@
     "dir='D:\\\\doc\\\\data\\\\ion1test\\\\Noali\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\ion1test\\\\alilong\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\twopump\\\\2060100\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\t2\\\\'\n",
     "dir='D:\\\\dataofpro\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\21\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\1140fs\\\\0\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\wave\\\\21\\\\'\n",
     "print('Working directory',dir)\n",
@@ -875,6 +875,102 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data=np.loadtxt(dir+'eneTRJV.dat')\n",
+    "t = data[:,0]\n",
+    "outDir=dir\n",
+    "population_by_continent = {\n",
+    "    'Translation': data[:,1],\n",
+    "    'Rotation':  data[:,2],\n",
+    "    'Vibration':  data[:,3],\n",
+    "}\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.stackplot(t, population_by_continent.values(),\n",
+    "             labels=population_by_continent.keys(), alpha=1)\n",
+    "ax.legend(loc='lower right')\n",
+    "#ax.set_title('World population')\n",
+    "ax.set_xlabel('Time (fs)')\n",
+    "ax.set_ylabel('Energy (a.u.)')\n",
+    "plt.savefig(outDir+'EnergyRJV.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(24/2.54,19.5/2.54))\n",
+    "intDir=dir\n",
+    "outDir=dir\n",
+    "fig = plt.figure(constrained_layout=True)\n",
+    "import matplotlib.gridspec as gridspec\n",
+    "gs = gridspec.GridSpec(3, 3)\n",
+    "data=np.loadtxt(intDir+'kpos.dat')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z1=data[:,2]\n",
+    "z2=data[:,3]\n",
+    "z3=data[:,4]\n",
+    "ax11 = fig.add_subplot(gs[0,0])\n",
+    "ax11.tricontourf(x,y,z1,levels,cmap='jet')\n",
+    "plt.ylim(-5.5,max(y))\n",
+    "ax21 = fig.add_subplot(gs[0,1])\n",
+    "ax21.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "ax31 = fig.add_subplot(gs[0,2])\n",
+    "ax31.tricontourf(x,y,z3,levels,cmap='jet')\n",
+    "\n",
+    "data=np.loadtxt(intDir+'kneg.dat')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z1=data[:,2]\n",
+    "z2=data[:,3]\n",
+    "z3=data[:,4]\n",
+    "ax12 = fig.add_subplot(gs[1,0])\n",
+    "ax12.tricontourf(x,y,z1,levels,cmap='jet')\n",
+    "ax22 = fig.add_subplot(gs[1,1])\n",
+    "ax22.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "ax32 = fig.add_subplot(gs[1,2])\n",
+    "ax32.tricontourf(x,y,z3,levels,cmap='jet')\n",
+    "# plt.ylim(min(y),5.5)\n",
+    "\n",
+    "data=np.loadtxt(intDir+'ktot.dat')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z1=data[:,2]\n",
+    "z2=data[:,3]\n",
+    "z3=data[:,4]\n",
+    "ax13= fig.add_subplot(gs[2,0])\n",
+    "ax13.tricontourf(x,y,z1,levels,cmap='jet')\n",
+    "ax23= fig.add_subplot(gs[2,1])\n",
+    "ax23.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "ax33= fig.add_subplot(gs[2,2])\n",
+    "ax33.tricontourf(x,y,z3,levels,cmap='jet')\n",
+    "#plt.ylim(-5.5,5.5)\n",
+    "plt.subplots_adjust(left=0.1,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.25, \n",
+    "                    hspace=0.25)\n",
+    "plt.savefig(outDir+'K.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if os.path.exists(dir+\"TimFreDis1.dat\"):\n",
     "    plt.figure(figsize=(24/2.54,18/2.54))\n",
     "    data=np.loadtxt(dir+\"Laser.dat\")\n",
@@ -1476,7 +1572,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit (windows store)",
+   "display_name": "Python 3.9.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1490,12 +1586,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
+    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
    }
   }
  },
