--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -59,10 +59,10 @@
     "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\t500t840\\\\44\\\\\"\n",
     "#dir='F:\\\\doc\\\\ion360\\\\t_30_60\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\42n\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\Noali\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\ion1test\\\\alilong\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\twopump\\\\2060100\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\t2\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\testP1\\\\'\n",
     "dir='D:\\\\dataofpro\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\1140fs\\\\0\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\wave\\\\21\\\\'\n",
@@ -875,7 +875,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt(dir+'eneTRJV.dat')\n",
+    "\n",
+    "data=np.loadtxt(dir+'eneTRJVion.dat')\n",
     "t = data[:,0]\n",
     "outDir=dir\n",
     "population_by_continent = {\n",
@@ -886,11 +887,12 @@
     "fig, ax = plt.subplots()\n",
     "ax.stackplot(t, population_by_continent.values(),\n",
     "             labels=population_by_continent.keys(), alpha=1)\n",
-    "ax.legend(loc='lower right')\n",
+    "ax.legend(loc='upper left')\n",
     "#ax.set_title('World population')\n",
     "ax.set_xlabel('Time (fs)')\n",
     "ax.set_ylabel('Energy (a.u.)')\n",
-    "plt.savefig(outDir+'EnergyRJV.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
+    "\n",
+    "plt.savefig(outDir+'EnergyRJVion.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
     "plt.show()"
    ]
   },
@@ -906,7 +908,7 @@
     "fig = plt.figure(constrained_layout=True)\n",
     "import matplotlib.gridspec as gridspec\n",
     "gs = gridspec.GridSpec(3, 3)\n",
-    "data=np.loadtxt(intDir+'kpos.dat')\n",
+    "data=np.loadtxt(intDir+'kneg.dat')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z1=data[:,2]\n",
@@ -920,7 +922,7 @@
     "ax31 = fig.add_subplot(gs[0,2])\n",
     "ax31.tricontourf(x,y,z3,levels,cmap='jet')\n",
     "\n",
-    "data=np.loadtxt(intDir+'kneg.dat')\n",
+    "data=np.loadtxt(intDir+'kpos.dat')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z1=data[:,2]\n",
@@ -1435,7 +1437,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "fileList =os.listdir(dir+\"wave\\\\\")\n",
     "print(fileList)\n",
     "dat_list=list()\n",
@@ -1501,6 +1502,45 @@
     "                        wspace=0.3, \n",
     "                        hspace=0.3)\n",
     "    plt.savefig(dir+\"wave\\\\\"+fileList[i][:16]+\".\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "    plt.show()\n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "fileList =os.listdir(dir+\"PAD\\\\\")\n",
+    "print(fileList)\n",
+    "dat_list=list()\n",
+    "print(\"Checking image list\")\n",
+    "n=len(fileList)\n",
+    "for i in range(n):\n",
+    "    s=dir+\"PAD\\\\\"+str(fileList[i])\n",
+    "    if s[-4:]==\".dat\":\n",
+    "        dat_list.append(s)\n",
+    "        \n",
+    "        \n",
+    "print(dat_list)\n",
+    "for i in range(n):\n",
+    "    \n",
+    "    data=np.loadtxt(dat_list[i])\n",
+    "    x=data[:,2]\n",
+    "    y=data[:,3]\n",
+    "    z=data[:,4]\n",
+    "  \n",
+    "    #fig=plt.subplots(2,2)\n",
+    "    #fig.title(\"$t$ = \"+fileList[i][11:13]+\" fs\")\n",
+    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "    plt.title('$t$ = '+fileList[i][13:16]+' fs',loc='left')\n",
+    "    plt.xlabel(\"$\\\\theta$ (degree)\")\n",
+    "    plt.ylabel(\"Energy (a.u.)\")\n",
+    "    plt.colorbar()\n",
+    "  \n",
+    "    plt.savefig(dir+\"PAD\\\\\"+fileList[i][:16]+\".\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "    plt.show()\n",
     " \n"
    ]
