--- a/Python/LaserDistribution.ipynb
+++ b/Python/LaserDistribution.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt(dir+\"LaserField.dat\")\n",
+    "data=np.loadtxt(dir+\"Laser.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
@@ -69,7 +69,7 @@
     "\n",
     "plt.subplot(2,2,4)\n",
     "plt.title(\"(d)\",loc='right')\n",
-    "data=np.loadtxt(dir+\"Laserfield.dat\")\n",
+    "data=np.loadtxt(dir+\"Laser.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
